added pry-byebug gem. Fixed issue with Order object required for POST/creation using swagger docs. Chaned validation rule order total_items greater_than: 0
